# Vision-Retrieval-Project

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  main.py  plan.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: metadata.json  test_queries.json
data/sample_index/: embeddings.npy  embeddings_ids.json  faiss.index  faiss.index.meta.json  metadata.json
notebooks/: 01_data_exploration.ipynb  02_clip_analysis.ipynb
scripts/: bench_latency.py  build_index.py  eval_retrieval.py  generate_test_queries.py  prepare_dataset.py
src/data/: __init__.py  dataset_loader.py  datatypes.py  metadata_store.py  preprocessor.py
src/model/: clip_encoder.py  embeddings_cache.py
src/pipeline/: batch_encode.py  indexer.py  retrieval_pipeline.py
src/search/: faiss_index.py  reranker.py
src/utils/: logger.py  metrics.py  visualize.py
tests/integration/: test_pipeline.py
tests/unit/: test_faiss_index.py  test_indexer.py
