[project]
name = "vision-retrieval-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "torch>=2.12.0",
    "torchvision>=0.20.0",
    "faiss-cpu>=1.8.0",
    "streamlit>=1.40.0",
    "Pillow>=10.0.0",
    "clip @ git+https://github.com/openai/CLIP.git"
]
