[project]
name = "vision-retrieval-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "faiss-cpu>=1.8.0",
    "matplotlib>=3.11.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "streamlit>=1.40.0",
    "torch>=2.12.0",
    "torchvision>=0.20.0",
    "transformers>=5.12.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
